--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,28 @@
 body {
-    background: url(/Images/background.jpg);
+    background: url(/Images/leather.jpg);
+}
+
+html * {
+    style {
+        @font-face {
+            font-family: trap;
+            src: url(/fonts/Trap-Bold.otf);
+        }
+    }
 }
 
 h1 {
-    @font-face {
-        font-family: trap;
-        src: url(/fonts/Trap-Bold.otf);
-    }
-
-    color: black;
+    color: rgb(7, 7, 7);
     text-shadow: 2px 2px whitesmoke;
     opacity: 0.8;
     font-size: 400%;
     text-align: center;
+}
+
+.past_projects {
+    color: whitesmoke;
+}
+
+.about_me {
+    color: whitesmoke
 }
