Change link font color.; add project section filler text; reorder page layout.

--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,18 @@ h1 {
     text-align: center;
 }
 
+.about_me {
+    color: whitesmoke
+}
+
 .past_projects {
     color: whitesmoke;
 }
 
-.about_me {
-    color: whitesmoke
+ul {
+    color: whitesmoke;
+}
+
+a {
+    color: whitesmoke;
 }
