--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 div {
     font-family: trap;
+    color: whitesmoke;
 }
 
 body {
@@ -20,6 +21,13 @@ h1 {
     font-stretch: 100%;
 }
 
+h2 {
+    text-align: center;
+    text-decoration: line-through;
+    font-size: 350%;
+    text-shadow: 2px 2px rgb(201, 125, 58);
+}
+
 .border {
     padding-top: 21px;
     padding-bottom: 5px;
@@ -31,11 +39,14 @@ h1 {
     opacity: 0.8;
 }
 
-.copy-border {
+.copyborder {
     border: 10px;
     border-style: double;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
     background-color: rgb(201, 125, 58);
-    opacity: 0.8;
 }
 
 p {
@@ -50,15 +61,10 @@ a {
     color: whitesmoke;
 }
 
-h2 {
-    color: whitesmoke;
-    text-align: center;
-    text-decoration: line-through;
-    font-size: 200%;
-}
-
 ul {
     color: whitesmoke;
+    margin-right: 50px;
+    margin-left: auto;
 }
 
 /*
