--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ div {
 }
 
 body {
-    background-image: url(/Images/background.jpg);
+    background-image: url(../Images/background.jpg);
 }
 
 img {
